백준 알고리즘 소스

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
   "prettier.singleQuote": false,
   "C_Cpp.updateChannel": "Insiders",
   "files.associations": {
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "iostream": "cpp"
   }
 }
